# lit_law411-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MVP_COMPLETION_SUMMARY.md  PROJECT_STRUCTURE_VERIFICATION.md  README.md  RESTART_INSTRUCTIONS.md  RESTART_INSTRUCTIONS_2025-06-13.md  TASK-012_IMPLEMENTATION_SUMMARY.md  THREE_DATABASE_STRATEGY.md  docker-compose.override.yml  docker-compose.yml  lit_law411-agent_PLANNING.md  lit_law411-agent_PRD.md  lit_law411-agent_TASKS.md  note2agent.md  note2agent_lit_lawyer-agent.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3397ec721695_initial_migration_with_all_core_models.py  add_api_key_management_table.py
docs/: INTEGRATION_ARCHITECTURE.md  api_key_management.md  logging.md  monitoring.md
examples/: branchechols_playlist_approval.py  find_personal_playlists.py  interactive_playlist_approval.py  legal_website_research_demo.py  playlist_approval_demo.py  playlist_ingestion_demo.py  test_playlist_structure.py  youtube_demo.py
scripts/: demo_auth.py  verify_database_status.py
src/: main.py
src/core/: api_key_middleware.py  api_key_utils.py  auth_middleware.py  config.py  cors.py  csrf.py  https_redirect.py  logging.py  metrics_middleware.py  middleware.py  monitoring.py  rate_limiter.py  security.py  security_headers.py  sentry.py
src/db/: __init__.py  cache_manager.py  database.py  redis_client.py
src/processors/: embeddings.py  nlp.py  transcription.py
src/research/: __init__.py  legal_website_researcher.py  (+1 more)
(+52 files in other folders)
