[project]
name = "lit-law411-agent"
version = "0.1.0"
description = "Enterprise-grade Legal Knowledge Base Agent"
authors = [
    {name = "Law411 Team"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "aiohttp (>=3.12.12,<4.0.0)",
    "scrapy (>=2.13.2,<3.0.0)",
    "yt-dlp (>=2025.6.9,<2026.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "pinecone-client (>=6.0.0,<7.0.0)",
    "elasticsearch (>=9.0.2,<10.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "sentry-sdk[fastapi] (>=2.24.0,<3.0.0)",
    "airtable-python-wrapper (>=0.15.3,<0.16.0)",
    "supabase (>=2.15.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.2.1"
pytest-asyncio = "^1.0.0"
black = "^25.1.0"
ruff = "^0.11.13"
mypy = "^1.16.0"
pre-commit = "^4.2.0"
locust = "^2.37.10"

